# mobile_manipulator

./: .gitignore  CLAUDE.md  build_all.sh  build_run_script_updates.md  claude.md  frames.gv  imu_driver_improvement_summary.md  launch_robot.sh  odom_module_implementation_summary.md  perception_node_library_conflict_fix.md  perception_node_library_conflict_fix_summary.md  real_sensor_access_layer_summary.md  run_all.sh  rviz_robotmodel_配置选项说明.md  start_real_robot.sh
catkin_ws/src/arm_controller/: CMakeLists.txt
catkin_ws/src/arm_controller/config/: topics.yaml
catkin_ws/src/arm_controller/launch/: arm_controller.launch
catkin_ws/src/arm_controller/scripts/: arm_controller_node.py
catkin_ws/src/chassis_controller/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/chassis_controller/config/: topics.yaml
catkin_ws/src/chassis_controller/launch/: chassis_controller.launch
catkin_ws/src/chassis_controller/scripts/: chassis_controller_node.py
catkin_ws/src/dag_framework/: CMakeLists.txt  package.xml
catkin_ws/src/dag_framework/launch/: dag_executor.launch
catkin_ws/src/dag_framework/scripts/: dag_executor.py
catkin_ws/src/imu_driver/: CMakeLists.txt  setup.py
catkin_ws/src/imu_driver/config/: topics.yaml
catkin_ws/src/imu_driver/launch/: imu_driver.launch  imu_driver_cpp.launch  imu_test.launch
catkin_ws/src/imu_driver/scripts/: imu_driver_node.py  imu_test.py
catkin_ws/src/imu_driver/src/: imu_driver.cpp  imu_driver_complete.cpp
catkin_ws/src/lidar_driver/: CMakeLists.txt  package.xml
catkin_ws/src/lidar_driver/launch/: lidar_driver_sim.launch  lidar_driver_simple.launch
catkin_ws/src/lidar_driver/scripts/: lidar_driver_node_sim.py
catkin_ws/src/odom/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/odom/launch/: odom.launch  odom_integration_test.launch
catkin_ws/src/sensor_calibration/: CMakeLists.txt
catkin_ws/src/sensor_calibration/launch/: sensor_calibration.launch  sensor_fusion.launch
catkin_ws/src/sensor_calibration/scripts/: sensor_calibration_node.py
catkin_ws/src/task_mgr/: package.xml
catkin_ws/src/task_mgr/config/: topics.yaml
catkin_ws/src/task_mgr/launch/: task_mgr.launch
catkin_ws/src/task_mgr/msg/: task_mgr.msg
catkin_ws/src/task_mgr/scripts/: task_mgr_node.py
src/arm_planner/: CMakeLists.txt  package.xml  plugin_description.xml
src/arm_planner/config/: collision_safety_check.yaml  enhanced_collision_safety.yaml  ground_collision.yaml
src/arm_planner/docs/: interactive_marker_usage.md
src/arm_planner/launch/: arm_planner.launch  arm_planner_demo.launch  collision_visualization.launch  demo_safe.launch  demo_ultra_safe.launch  demo_with_ground.launch  demo_with_ground_protection.launch  main_demo.launch  move_group_with_ground.launch  moveit_with_enhanced_control.launch  moveit_with_stop_button.launch  rviz_with_stop_button.launch
src/arm_planner/msg/: ArmTrajectory.msg
src/arm_planner/scripts/: arm_control_with_gripper.py  arm_planner_node.py  check_chassis_collision.py  collision_scene_manager.py  continuous_collision_checker.py  emergency_stop_handler.py  enhanced_stop_button.py  follow_joint_trajectory_server.py  ground_collision_manager.py  ground_collision_monitor.py  joint_moveit_ctrl_server.py  launch_status_info.py  launch_with_safety.sh  main_demo.sh  motion_smoother.py  quick_demo.sh  rviz_stop_panel.py  safety_monitor.py  safety_response_manager.py  safety_visualization.py  simple_stop_button.py  simplify_chassis_collision.py  test_arm_planner.py  test_collision_detection.py  test_ground_collision.py  verify_collision_detection.py
src/arm_planner/scripts/safety/: continuous_collision_checker.py  emergency_stop_handler.py  ground_collision_monitor.py  motion_smoother.py  safety_monitor.py  safety_visualization.py  (+2 more)
src/arm_planner/src/: stop_button_panel.cpp
src/camera_driver/: CMakeLists.txt  setup.py
src/camera_driver/config/: topics.yaml
src/camera_driver/scripts/: camera_driver_node_bk.py  camera_driver_node_bk1.py  camera_driver_node_bk2.py
src/chassis_controller/: CMakeLists.txt  package.xml
src/chassis_controller/launch/: chassis_controller.launch
src/chassis_planner/: CMakeLists.txt  package.xml
src/chassis_planner/launch/: chassis_planner.launch  chassis_planner_test.launch  tracer_base.launch
src/chassis_planner/param/: amcl_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  move_base_params.yaml
src/chassis_planner/rviz/: rviz_navigation.rviz
src/chassis_planner/scripts/: goal_publisher.py
src/perception/: CMakeLists.txt  package.xml
src/perception/config/: depth_projection_visualization.rviz  grasp_3d.rviz  grasp_3d_simple.rviz  grasp_3d_view.rviz  grasp_3d_view_simple.rviz  perception_unified.yaml  perception_universal.rviz  perception_visualization.rviz  perception_visualization_optimized.rviz  perception_visualization_with_refer.rviz  topics.yaml
src/perception/docs/: performance_analysis.md
src/perception/launch/: depth_projection.launch  grasp_3d.launch  grasp_3d_dual.launch  perception_dino.launch  perception_dino_sim.launch  perception_dino_test.launch  perception_unified.launch
src/perception/msg/: GraspDetection.msg  GraspDetection3D.msg  GraspDetectionArray.msg  GraspDetectionArray3D.msg  GraspPose.msg  GraspPose3D.msg  ObjectDetection.msg  ObjectDetectionArray.msg  TouchingPoint.msg  TouchingPoint3D.msg
src/perception/scripts/: calibration_publisher.py  camera_manager.py  chassis_detector.py  depth_grasp_processor.py  depth_grasp_processor_simple.py  depth_grasp_processor_v2.py  depth_projection_node.py  depth_projector_core.py  detection_manager.py  grasp_3d_visualizer.py  grasp_tf_converter.py  hand_grasp_detector.py  percept_dino_api_test.py  perception_node.py  perception_unified_node.py  pipeline_manager.py  projection_manager.py  referring_visualizer.py  rviz_config_controller.py  server_grasp.json  startup_delay.py  test_image_publisher.py
src/robot_drivers/lidar_driver/: CMakeLists.txt
src/target_filter/: package.xml
src/target_filter/scripts/: target_filter_node.py
src/task_mgr/: CMakeLists.txt
(+1171 files in other folders)
