<?xml version="1.0"?>
<package format="2">
  <name>chassis_planner</name>
  <version>0.0.1</version>
  <description>Chassis planner module for AgileX robot</description>
  
  <maintainer email="maintainer@example.com">AgileX</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rviz</depend>
  <depend>actionlib_msgs</depend>
  
  <export>
    <rviz plugin="${prefix}/rviz_navi_multi_goals_pub_plugin/navi_multi_goals_pub_rviz_plugin/plugin_description.xml"/>
  </export>
</package>