<?xml version="1.0"?>
<package format="2">
  <name>chassis_controller</name>
  <version>0.0.1</version>
  <description>Chassis controller module for AgileX robot</description>
  
  <maintainer email="maintainer@example.com">AgileX</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <export>
  </export>
</package>