<?xml version="1.0"?>
<package format="2">
  <name>dag_framework</name>
  <version>0.0.1</version>
  <description>DAG execution framework for AgileX robot</description>
  
  <maintainer email="maintainer@example.com">AgileX</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  
  <export>
  </export>
</package>